// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history entry renders correctly 01 1`] = `
<div>
  <div
    class="
      list__column history-entry
      history-entry--undo
      is-associated
      
      
      
      
      
    "
    tabindex="0"
  >
    <span
      class="history-entry__description"
    >
      test
    </span>
    <span
      class="bp4-popover-wrapper"
    >
      <span
        aria-haspopup="true"
        class="bp4-popover-target"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-undo history-entry__icon"
          icon="undo"
          tabindex="0"
        >
          <svg
            data-icon="undo"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M4 11c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7-7H3.41L4.7 2.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-3 3C.11 4.47 0 4.72 0 5c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L3.41 6H11c1.66 0 3 1.34 3 3s-1.34 3-3 3H7v2h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`history entry renders correctly 02 1`] = `
<div>
  <div
    class="
      list__column history-entry
      history-entry--redo
      
      is-affected
      
      is-orphaned
      
      is-event-reset
    "
    tabindex="0"
  >
    <span
      class="history-entry__description"
    >
      test
    </span>
    <span
      class="bp4-popover-wrapper"
    >
      <span
        aria-haspopup="true"
        class="bp4-popover-target"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-issue bp4-intent-danger history-entry__icon"
          icon="issue"
          tabindex="0"
        >
          <svg
            data-icon="issue"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 118 0a8 8 0 010 16zm0-2A6 6 0 108 2a6 6 0 000 12zm1-2H7v-2h2v2zm0-3H7V4h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      class="bp4-popover-wrapper"
    >
      <span
        aria-haspopup="true"
        class="bp4-popover-target"
      >
        <span
          aria-hidden="true"
          class="bp4-icon bp4-icon-redo history-entry__icon"
          icon="redo"
          tabindex="0"
        >
          <svg
            data-icon="redo"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M12 11c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm3.71-6.71l-3-3a1.003 1.003 0 00-1.42 1.42L12.59 4H5C2.24 4 0 6.24 0 9s2.24 5 5 5h4v-2H5c-1.66 0-3-1.34-3-3s1.34-3 3-3h7.59L11.3 7.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3-3c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;
